log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      containers:
        - name: writer
          image: log_output:local
          command: ["node", "writer.js"]

        - name: reader
          image: log_output:local
          command: ["node", "reader.js"]
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: config-volume
              mountPath: /app/config
              readOnly: true
      volumes:
        - name: config-volume
          configMap:
            name: log-output-config
            items:
              - key: information.txt
                path: information.txt
